--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 React_App_Frontend_URL='http://localhost:3000'
-React_App_Backend_URL='http://localhost:5000'
+React_App_Backend_URL='https://final-itp-backend-923ae2bffe4e.herokuapp.com'
