--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recharts": "^2.12.5",
     "remixicons": "^1.0.0",
     "request": "^2.88.2",
+    "serve": "^14.2.3",
     "web-vitals": "^3.5.2",
     "yup": "^1.4.0"
   },
