--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-React_App_Frontend_URL='https://final-frontend-ivory.vercel.app'
+React_App_Frontend_URL='https://neotechmotors.live/'
 React_App_Backend_URL='https://final-itp-backend-923ae2bffe4e.herokuapp.com'
